--- a/TestData/config.properties
+++ b/TestData/config.properties
@@ -1,3 +1,3 @@
 url=http://newtours.demoaut.com/mercurywelcome.php
-node1=http://localhost:5555/wd/hub
-node2=http://localhost:5555/wd/hub
+node1=http://192.168.2.14:5555/wd/hub
+node2=http://192.168.2.14:5555/wd/hub
